Fix: Update baseURL for GitHub Pages project site

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://genli-xyz.github.io"
+baseurl = "https://sophgen.github.io/genli-xyz/"
 languageCode = "en-us"
 title = "AI Insights & Innovations"
 copyright = "© Your Name"
