Fix: Update baseURL for custom domain (genli.xyz)

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://sophgen.github.io/genli-xyz/"
+baseurl = "https://genli.xyz/"
 languageCode = "en-us"
 title = "AI Insights & Innovations"
 copyright = "© Your Name"
