--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -2,6 +2,7 @@
 identifier = "home"
 name = "Home"
 url = "/"
+weight = 1
 [main.params]
 icon = "home"
 newtab = false
@@ -10,6 +11,7 @@ newtab = false
 identifier = "about"
 name = "About"
 url = "/about/"
+weight = 2
 [main.params]
 icon = "user"
 newtab = false
@@ -18,6 +20,7 @@ newtab = false
 identifier = "archives"
 name = "Archives"
 url = "/archives/"
+weight = 3
 [main.params]
 icon = "archives"
 newtab = false
@@ -26,6 +29,7 @@ newtab = false
 identifier = "search"
 name = "Search"
 url = "/search/"
+weight = 4
 [main.params]
 icon = "search"
 newtab = false
