--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,6 +1,6 @@
 baseurl = "https://genli.xyz/"
 languageCode = "en-us"
-title = "AI Insights & Innovations"
+title = "Neural Nonsense"
 copyright = "© Your Name"
 
 [pagination]
