--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -1,6 +1,6 @@
 [en]
 languageName = "English"
-title = "AI Insights & Innovations"
+title = "Neural Nonsense"
 weight = 1
 [en.params]
 description = "A personal blog exploring artificial intelligence, machine learning, and emerging technologies"
